--- a/app/views/rails_admin/main/show_history.html.erb
+++ b/app/views/rails_admin/main/show_history.html.erb
@@ -12,11 +12,10 @@
 <%= render(:partial => 'layouts/rails_admin/flash', :locals => {:flash => flash}) -%>
       <div id="contentMainModules">
         <div class="searchBox">
-          <form action="#" method="get">
+          <form action="" method="get">
             <fieldset>
               <input type="text" id="searchBar" name="query" value="<%= query %>"/>
               <input type="submit" id="searchbar_btn" value="<%= t("admin.list.search_btn")%>" />
-              <input type="hidden" value="<%= params["id"] %>" name="id">
             </fieldset>
           </form>
         </div>
@@ -24,38 +23,34 @@
           <thead>
             <tr>
               <% property_name = "created_at"%>
+              <% selected = sort == property_name.to_s %>
+              <% sort_direction = selected ? (sort_reverse ? "ascending" : "descending") : nil %>
               <th class="dateTime <%= sort == property_name.to_s ? "selected" : nil %>" >
-                <% sort_location = params.merge(:sort => :created_at).reject{|key, value| key.to_sym == :sort_reverse}.merge(sort == property_name && sort_reverse != "true" ? {:sort_reverse => "true"} : {}) %>
-                <%= link_to("DATE/TIME", sort_location, :ref => sort_location.to_json, :class => "historySort") %>
-                <% if sort == property_name.to_s %>
-                <%= link_to sort_arrow_image(sort_reverse), sort_location, :ref => sort_location.to_json, :class => "headerSort" %>
-                <% end %>
+                <% sort_location = params.merge(:sort => :created_at).reject{|key, value| key.to_sym == :sort_reverse}.merge(selected && sort_reverse != "true" ? {:sort_reverse => "true"} : {}) %>
+                <%= link_to("DATE/TIME", sort_location, :class => sort_direction) %>
               </th>
               <% property_name = "username"%>
+              <% selected = sort == property_name.to_s %>
+              <% sort_direction = selected ? (sort_reverse ? "ascending" : "descending") : nil %>
               <th class="smallString <%= sort == property_name.to_s ? "selected" : nil %>" >
-                <% sort_location = params.merge(:sort => property_name).reject{|key, value| key.to_sym == :sort_reverse}.merge(sort == property_name && sort_reverse != "true" ? {:sort_reverse => "true"} : {}) %>
-                <%= link_to("USER", sort_location, :ref => sort_location.to_json, :class => "historySort") %>
-                <% if sort == property_name.to_s %>
-                <%= link_to sort_arrow_image(sort_reverse), sort_location, :ref => sort_location.to_json, :class => "headerSort" %>
-                <% end %>
+                <% sort_location = params.merge(:sort => property_name).reject{|key, value| key.to_sym == :sort_reverse}.merge(selected && sort_reverse != "true" ? {:sort_reverse => "true"} : {}) %>
+                <%= link_to("USER", sort_location, :class => sort_direction) %>
               </th>
               <% if @general %>
               <% property_name = "item"%>
+              <% selected = sort == property_name.to_s %>
+              <% sort_direction = selected ? (sort_reverse ? "ascending" : "descending") : nil %>
               <th class="int <%= sort == property_name.to_s ? "selected" : nil %>" >
-                <% sort_location = params.merge(:sort => property_name).reject{|key, value| key.to_sym == :sort_reverse}.merge(sort == property_name && sort_reverse != "true" ? {:sort_reverse => "true"} : {}) %>
-                <%= link_to("ITEM", sort_location, :ref => sort_location.to_json, :class => "historySort") %>
-                <% if sort == property_name.to_s %>
-                <%= link_to sort_arrow_image(sort_reverse), sort_location, :ref => sort_location.to_json, :class => "headerSort" %>
-                <% end %>
+                <% sort_location = params.merge(:sort => property_name).reject{|key, value| key.to_sym == :sort_reverse}.merge(selected && sort_reverse != "true" ? {:sort_reverse => "true"} : {}) %>
+                <%= link_to("ITEM", sort_location, :class => sort_direction) %>
               </th>
               <% end %>
               <% property_name = "message"%>
+              <% selected = sort == property_name.to_s %>
+              <% sort_direction = selected ? (sort_reverse ? "ascending" : "descending") : nil %>
               <th class="smallString <%= sort == property_name.to_s ? "selected" : nil %>" >
-                <% sort_location = params.merge(:sort => property_name).reject{|key, value| key.to_sym == :sort_reverse}.merge(sort == property_name && sort_reverse != "true" ? {:sort_reverse => "true"} : {}) %>
-                <%= link_to("ACTION", sort_location, :ref => sort_location.to_json, :class => "historySort") %>
-                <% if sort == property_name.to_s %>
-                <%= link_to sort_arrow_image(sort_reverse), sort_location, :ref => sort_location.to_json, :class => "headerSort" %>
-                <% end %>
+                <% sort_location = params.merge(:sort => property_name).reject{|key, value| key.to_sym == :sort_reverse}.merge(selected && sort_reverse != "true" ? {:sort_reverse => "true"} : {}) %>
+                <%= link_to("ACTION", sort_location, :class => sort_direction) %>
               </th>
             </tr>
           </thead>
