--- a/app/views/rails_admin/main/index.html.erb
+++ b/app/views/rails_admin/main/index.html.erb
@@ -16,7 +16,7 @@
             <% @abstract_models.each do |abstract_model| %>
               <tr class="<%= cycle 'odd', 'even' %>">
                 <td class="modelNameRow">
-                  <%= link_to(abstract_model.pretty_name, rails_admin_list_path(:model_name => abstract_model.to_param), :class => "show") %>
+                  <%= link_to(RailsAdmin.config(abstract_model).list.label, rails_admin_list_path(:model_name => abstract_model.to_param), :class => "show") %>
                 </td>
                 <td>
                 <% if (last_used = RailsAdmin::History.most_recent(abstract_model.pretty_name).last.try(:updated_at)) %>
