--- a/app/views/rails_admin/main/_belongs_to_association.html.erb
+++ b/app/views/rails_admin/main/_belongs_to_association.html.erb
@@ -7,8 +7,11 @@
   end
 
   model_name = field.abstract_model.to_param
+  associated_model = field.associated_model_config
+  associated_model_name = associated_model.abstract_model.to_param
 %>
-                  <%= label_tag "#{model_name}_#{field.name}", field.label %>
-                  <%= select model_name, field.child_key, collection, {:include_blank => true, :selected => selected}, :class => "selectField #{field.has_errors? ? "errorField" : nil}" %>
 
-<%= link_to "Add new #{field.label}", rails_admin_new_path(:model_name => model_name), :remote => true, :id => "show_associated_record_form"  %>
+<%= label_tag "#{model_name}_#{field.name}", field.label %>
+<%= select model_name, field.child_key, collection, {:include_blank => true, :selected => selected}, :class => "selectField #{field.has_errors? ? "errorField" : nil}" %>
+
+<%= link_to "Add new #{associated_model_name}", rails_admin_new_path(:model_name => associated_model_name ),  :remote => true, :class => "show_associated_record_form"  %>
