--- a/app/views/rails_admin/main/_new_submit_buttons.html.erb
+++ b/app/views/rails_admin/main/_new_submit_buttons.html.erb
@@ -1,14 +1,14 @@
 <ul id="submitArea">
   <li id="saveContainer">
-    <%= submit_tag t("admin.new.save"), :class => "button default", :name => "_save", :id => "save_btn" %>
+    <%= submit_tag t("admin.new.save"), :class => "button default save_button", :name => "_save", :id => "save_btn" %>
   </li>
   <li id="saveAddContainer">
-    <%= submit_tag t("admin.new.save_and_add_another"), :class => "button", :name => "_add_another", :id => "saveAdd_btn" %>
+    <%= submit_tag t("admin.new.save_and_add_another"), :class => "button save_and_add_another_button", :name => "_add_another", :id => "saveAdd_btn" %>
   </li>
   <li id="saveEditContainer">
-    <%= submit_tag t("admin.new.save_and_edit"), :class => "button", :name => "_add_edit", :id => "saveEdit_btn" %>
+    <%= submit_tag t("admin.new.save_and_edit"), :class => "button save_and_edit_button", :name => "_add_edit", :id => "saveEdit_btn" %>
   </li>
   <li id="cancelContainer">
-    <%= submit_tag t("admin.new.cancel"), :class => "button", :name => "_continue", :id => "cancel_btn" %>
+    <%= submit_tag t("admin.new.cancel"), :class => "button cancel_button", :name => "_continue", :id => "cancel_btn" %>
   </li>
 </ul>
