--- a/app/views/rails_admin/main/_user_info.html.erb
+++ b/app/views/rails_admin/main/_user_info.html.erb
@@ -1,4 +1,4 @@
-<% if current_user %>
+<% if current_user = _current_user %>
 <div class="user_info">
   <img src="http://www.gravatar.com/avatar/<%=Digest::MD5.hexdigest current_user.email %>?s=30" alt="" />
   <ul>
