--- a/app/views/rails_admin/main/create.js.erb
+++ b/app/views/rails_admin/main/create.js.erb
@@ -1,7 +1,7 @@
 <%  if @saved %>
   <% label_field = RailsAdmin.config(@object.class).bind(:object, @object).list.object_label %>
   $j.facebox.close();
-  $j('.<%=  @object.class.to_s.tableize.singularize %>_id').trigger('update_with_new_element',[<%= @object.id %>, '<%= label_field  %>']);
+  $j('.<%=  @object.class.to_s.tableize.singularize %>_id').trigger('updateWithNewElement',[<%= @object.id %>, '<%= label_field  %>']);
 <% else %>
   $j.facebox('<%= escape_javascript(render :partial => 'new') %>');
 <% end %>
