--- a/app/views/layouts/rails_admin/form.html.erb
+++ b/app/views/layouts/rails_admin/form.html.erb
@@ -4,6 +4,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title><%= @page_name %> | <%= @plugin_name %></title>
   <%= stylesheet_link_tag('rails_admin/base.css') %>
+  <%= stylesheet_link_tag('rails_admin/facebox.css') %>
   <%= stylesheet_link_tag('rails_admin/create.css') %>
 
   <%= javascript_include_tag('rails_admin/prototype.js') %>
@@ -16,7 +17,7 @@
   <%= stylesheet_link_tag('rails_admin/datepicker.css') %>
 
   <%= javascript_include_tag "http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js" %>
-  <%= include_facebox %>
+  
   <%= javascript_include_tag "rails_admin/jquery.no-conflict.js","rails_admin/rails.js","rails_admin/related-record-creating.js","rails_admin/facebox.js" %>
   
   
