--- a/app/views/rails_admin/main/_boolean.html.erb
+++ b/app/views/rails_admin/main/_boolean.html.erb
@@ -1,2 +1,2 @@
                 <%= label_tag "#{field.abstract_model.to_param}_#{field.name}", field.label %>
-                <%= check_box field.abstract_model.to_param, field.name, :checked => field.value ? true : false %>
+                <%= check_box field.abstract_model.to_param, field.name, :class => "#{field.css_class} #{field.has_errors? ? "errorField" : nil}", :checked => field.value ? true : false %>
