--- a/app/views/rails_admin/main/list.html.erb
+++ b/app/views/rails_admin/main/list.html.erb
@@ -58,7 +58,7 @@
               <% property_name = property.name %>
               <% property_pretty_name = property.label %>
               <% selected = sort == property_name.to_s %>
-              <th class="<%= "#{property.column_css_class}" %> <%= selected ? "selected" : nil %>">
+              <th class="<%= "#{property.css_class}" %> <%= selected ? "selected" : nil %>">
                 <% if property.sortable? %>
                 <% sort_location = params.merge(:sort => property_name).reject{|key, value| key.to_sym == :sort_reverse}.merge(selected && sort_reverse != "true" ? {:sort_reverse => "true"} : {}) %>
                 <% sort_direction = selected ? (sort_reverse ? "ascending" : "descending") : nil %>
@@ -80,7 +80,7 @@
               <% other_left = params.reject{|key, value| key == "set"}.merge(:set => params[:set].to_i - 1) %>
               <td class="other left"><%= link_to("...", other_left) %></td>
               <% properties.each do |property| %>
-              <td class="<%= "#{property.column_css_class}" %>"><%= [:text, :string].include?(property.type) ? property.formatted_value[0..40] : property.formatted_value %></td>
+              <td class="<%= "#{property.css_class}" %>"><%= [:text, :string].include?(property.type) ? property.formatted_value[0..40] : property.formatted_value %></td>
               <% end %>
               <% other_right = params.reject{|key, value| key == "set"}.merge(:set => params[:set].to_i + 1) %>
               <td class="other right"><%= link_to("...", other_right)%></td>
