--- a/app/views/layouts/rails_admin/form.html.erb
+++ b/app/views/layouts/rails_admin/form.html.erb
@@ -11,6 +11,8 @@
   <%= javascript_include_tag('rails_admin/prototype-date-extensions.js') %>
   <%= javascript_include_tag('rails_admin/datepicker.js') %>
   <%= javascript_include_tag('rails_admin/associations.js') %>
+  <%= javascript_include_tag('ckeditor/ckeditor.js') %>
+  <%= javascript_include_tag('rails_admin/dashboard.js') %>
   <%= stylesheet_link_tag('rails_admin/datepicker.css') %>
 
   <script type="text/javascript" language="javascript">
@@ -32,6 +34,17 @@
     $$(".datetimeField").each(function(elem){
       new Control.DatePicker(elem, {icon: '/images/rails_admin/calendar.png', timePicker: true, timePickerAdjacent: true});
     });
+
+    <%
+    RailsAdmin::config(@object).edit.visible_groups.each do |form_section|
+      next unless form_section.visible_fields.length > 0
+      form_section.visible_fields.select { |field| field.respond_to?(:column_width) }.each do |field|
+    %>
+    $("<%= "##{field.abstract_model.to_param}_#{field.name}" %>").style.width = "<%= field.column_width%>px";
+    <% 
+      end
+    end
+    %>
   });
 
   </script>
