--- a/app/views/rails_admin/main/bulk_delete.html.erb
+++ b/app/views/rails_admin/main/bulk_delete.html.erb
@@ -3,9 +3,9 @@
         </div>
 <%= render(:partial => 'layouts/rails_admin/flash', :locals => {:flash => flash}) -%>
         <div id="contentMainDelete">
-          <p>Are you sure you want to delete the <%= @abstract_model.pretty_name.downcase %> &ldquo;<strong><%= @model_config.bind(@object).list.object_label %></strong>&rdquo;? All of the following related items will be deleted:</p>
-          <%= render :partial => "delete_notice", :object => @object %>
-          <%= form_for(@object, :url => rails_admin_destroy_path(:model_name => @abstract_model.to_param, :id => @object.id), :html => {:method => "delete"}) do %>
+          <p>Are you sure you want to delete the following object along with all of the following related items will be deleted:</p>
+          <%= render :partial => "delete_notice", :collection => @bulk_objects %>
+          <%= form_tag rails_admin_bulk_destroy_path(:model_name => @abstract_model.to_param, :bulk_ids => @bulk_ids) do %>
 
             <div id="deleteConfirmation">
               <ul id="submitArea">
