styling of delete selected button

--- a/app/views/rails_admin/main/list.html.erb
+++ b/app/views/rails_admin/main/list.html.erb
@@ -93,7 +93,9 @@
               <% end %>
             </tbody>
           </table>
-          <%= submit_tag t("admin.list.delete_selected") %>
+          <div id="tableFooter">
+            <%= submit_tag t("admin.list.delete_selected"), :id => "bulkdelete_btn" %>
+          </div>
         <% end %>
       </div>
     </div>
