Removed accidental changes from en_US to pt_BR

--- a/app/views/layouts/rails_admin/form.html.erb
+++ b/app/views/layouts/rails_admin/form.html.erb
@@ -16,7 +16,7 @@
   <%= stylesheet_link_tag('rails_admin/datepicker.css') %>
 
   <script type="text/javascript" language="javascript">
-  Control.DatePicker.Locale['pt_BR'] = {
+  Control.DatePicker.Locale['en_US'] = {
     dateTimeFormat: 'yyyy-MM-dd HH:mm',
     dateFormat: 'yyyy-MM-dd'}
 
@@ -91,3 +91,4 @@
   </div>
 </body>
 </html>
+
