--- a/app/views/rails_admin/main/_form_section.html.erb
+++ b/app/views/rails_admin/main/_form_section.html.erb
@@ -4,6 +4,6 @@
 <% if visible_fields.length > 0 %>
             <h2><%= form_section.label %></h2>
             <div class="formSection">
-<%= render(:partial => 'field', :collection => visible_fields) -%>
+<%= render(:partial => 'field', :collection => visible_fields.map{|field| field.visit(:object => @object, :view => self)}) -%>
             </div>
 <% end %>
