For the sake of correctness rename visitor (introduced by a46bb2b1e6cc49fbfc0db86597de2b7fa7323ece) to proxy as that term is more valid in this case. By that same reasoning rename the visit method (which returns the proxy with bound variables) to with.

--- a/app/views/rails_admin/main/delete.html.erb
+++ b/app/views/rails_admin/main/delete.html.erb
@@ -3,7 +3,7 @@
         </div>
 <%= render(:partial => 'layouts/rails_admin/flash', :locals => {:flash => flash}) -%>
         <div id="contentMainDelete">
-          <p>Are you sure you want to delete the <%= @abstract_model.pretty_name.downcase %> &ldquo;<strong><%= @model_config.list.visit(:object => @object).object_label %></strong>&rdquo;? All of the following related items will be deleted:</p>
+          <p>Are you sure you want to delete the <%= @abstract_model.pretty_name.downcase %> &ldquo;<strong><%= @model_config.list.with(:object => @object).object_label %></strong>&rdquo;? All of the following related items will be deleted:</p>
           <%= render :partial => "delete_notice", :object => @object %>
           <%= form_for(@object, :url => rails_admin_destroy_path(:model_name => @abstract_model.to_param, :id => @object.id), :html => {:method => "delete"}) do %>
             <div id="deleteConfirmation">
