--- a/app/views/rails_admin/main/_delete_notice.html.erb
+++ b/app/views/rails_admin/main/_delete_notice.html.erb
@@ -5,12 +5,12 @@
 %>
 <ul>
   <li>
-    <%= @abstract_model.pretty_name %>: <%= link_to(model_config.list.visit(:object => object).object_label, rails_admin_edit_path(:model_name => @abstract_model.to_param, :id => object.id)) %>
+    <%= @abstract_model.pretty_name %>: <%= link_to(model_config.list.with(:object => object).object_label, rails_admin_edit_path(:model_name => @abstract_model.to_param, :id => object.id)) %>
     <ul>
       <% @abstract_model.has_many_associations.each do |association| %>
       <% object.send(association[:name]).reject{|child| child.nil?}.each do |child| %>
       <li>
-        One or more <%= @abstract_model.pretty_name.pluralize.downcase %> in <%= association[:pretty_name].downcase %>: <%= link_to(RailsAdmin.config(child).list.visit(:object => child).object_label, rails_admin_edit_path(:model_name => association[:name].to_s.singularize.to_sym, :id => child.id)) %>
+        One or more <%= @abstract_model.pretty_name.pluralize.downcase %> in <%= association[:pretty_name].downcase %>: <%= link_to(RailsAdmin.config(child).list.with(:object => child).object_label, rails_admin_edit_path(:model_name => association[:name].to_s.singularize.to_sym, :id => child.id)) %>
       </li>
       <% end %>
       <% end %>
@@ -18,7 +18,7 @@
       <% child = object.send(association[:name]) %>
       <% next if child.nil? %>
       <li>
-        A <%= @abstract_model.pretty_name.downcase %> in <%= association[:pretty_name].downcase %>: <%= link_to(RailsAdmin.config(child).list.visit(:object => child).object_label, rails_admin_edit_path(:model_name => association[:name], :id => child.id)) %>
+        A <%= @abstract_model.pretty_name.downcase %> in <%= association[:pretty_name].downcase %>: <%= link_to(RailsAdmin.config(child).list.with(:object => child).object_label, rails_admin_edit_path(:model_name => association[:name], :id => child.id)) %>
       </li>
       <% end %>
     </ul>
