--- a/app/views/rails_admin/main/list.html.erb
+++ b/app/views/rails_admin/main/list.html.erb
@@ -4,7 +4,7 @@
   filter = params[:filter]
   sort = params[:sort]
   sort_reverse = params[:sort_reverse]
-  properties = @model_config.list.visible_fields.map{|property| property.visit(:view => self)}
+  properties = @model_config.list.visible_fields.map{|property| property.with(:view => self)}
   filters_exist = !properties.select{|property| property.type == :boolean}.empty?
   # columns paginate
   @style, @other, properties = get_column_set(properties)
