Add jQuery UI assets

--- a/app/views/layouts/rails_admin/form.html.erb
+++ b/app/views/layouts/rails_admin/form.html.erb
@@ -6,6 +6,7 @@
   <%= stylesheet_link_tag('rails_admin/base.css') %>
   <%= stylesheet_link_tag('rails_admin/facebox.css') %>
   <%= stylesheet_link_tag('rails_admin/create.css') %>
+  <%= stylesheet_link_tag('rails_admin/jquery-ui-smoothness/jquery-ui-1.8.9.custom.css') %>
 
   <%= javascript_include_tag('rails_admin/prototype.js') %>
   <%= javascript_include_tag('rails_admin/prototype-base-extensions.js') %>
@@ -17,10 +18,11 @@
   <%= stylesheet_link_tag('rails_admin/datepicker.css') %>
 
   <%= javascript_include_tag "http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js" %>
-  
+  <%= javascript_include_tag "https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/jquery-ui.min.js" %>
+
   <%= javascript_include_tag "rails_admin/jquery.no-conflict.js","rails_admin/rails.js","rails_admin/create-related-record.js","rails_admin/facebox.js" %>
-  
-  
+
+
 
   <script type="text/javascript" language="javascript">
   Control.DatePicker.Locale['en_US'] = {
